[gd_scene load_steps=3 format=3 uid="uid://cil42wn4fnd17"]

[ext_resource type="Script" uid="uid://hv5gif5mgo2b" path="res://Scripts/passenger.gd" id="1_lyrvh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyrvh"]

[node name="Passenger" type="Area2D" groups=["Passenger"]]
scale = Vector2(2.25, 2.25)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_lyrvh")

[node name="Sprites" type="Node2D" parent="."]

[node name="InteractionArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lyrvh")

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = -16.4
offset_top = -31.6
offset_right = 142.6
offset_bottom = 10.4
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "[E] Interact"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
